aghtex (aghtex-stretch-svg): ensure width for stretching SVG brackets

--- a/src/latex/latex.pp.css
+++ b/src/latex/latex.pp.css
@@ -720,19 +720,20 @@ tex\:math.aghtex-flalign { text-align: left; }
   td.aghtex-stretch-bg-sqrt   { width: 1.60ex!important; background-image: url(stretch_sqrt.svg)  !important; }
 
 /*%%end*/
-/*%%if mode=="Gecko"||mode=="WebKit"*/
+/*%%if mode=="Gecko"||mode=="WebKit" */
   /* stretching image with <svg> */
   td.aghtex-stretch-svg {
     width: 1.0ex!important; height: 100%!important; position: relative!important; }
   td.aghtex-stretch-svg>svg {
     width: 1.0ex!important; height: 100%!important; position: absolute!important; left: 0!important; top: 0!important; }
+  td.aghtex-stretch-svg>tex\:i { display: block; width: 1.0ex!important; height: 0!important; }
 
-  td.aghtex-stretch-svg-lparen, td.aghtex-stretch-svg-lparen>svg,
-  td.aghtex-stretch-svg-rparen, td.aghtex-stretch-svg-rparen>svg { width: ${.eval|mode=="Gecko"?"1.0":"0.8"}ex!important; }
-  td.aghtex-stretch-svg-lbrace, td.aghtex-stretch-svg-lbrace>svg,
-  td.aghtex-stretch-svg-rbrace, td.aghtex-stretch-svg-rbrace>svg { width: ${.eval|mode=="Gecko"?"1.2":"0.96"}ex!important; }
-  td.aghtex-stretch-svg-langle, td.aghtex-stretch-svg-langle>svg,
-  td.aghtex-stretch-svg-rangle, td.aghtex-stretch-svg-rangle>svg { width: ${.eval|mode=="Gecko"?"1.0":"0.8"}ex!important; }
+  td.aghtex-stretch-svg-lparen, td.aghtex-stretch-svg-lparen>*,
+  td.aghtex-stretch-svg-rparen, td.aghtex-stretch-svg-rparen>* { width: ${.eval|mode=="Gecko"?"1.0":"0.8"}ex!important; }
+  td.aghtex-stretch-svg-lbrace, td.aghtex-stretch-svg-lbrace>*,
+  td.aghtex-stretch-svg-rbrace, td.aghtex-stretch-svg-rbrace>* { width: ${.eval|mode=="Gecko"?"1.2":"0.96"}ex!important; }
+  td.aghtex-stretch-svg-langle, td.aghtex-stretch-svg-langle>*,
+  td.aghtex-stretch-svg-rangle, td.aghtex-stretch-svg-rangle>* { width: ${.eval|mode=="Gecko"?"1.0":"0.8"}ex!important; }
 /*%%if mode=="Gecko"*/
   td.aghtex-stretch-svg-sqrt>svg { left: 0.2px!important; top: -1.0px!important; }
 /*%%end*/
